--- a/app-store-vue/package.json
+++ b/app-store-vue/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.1.2",
     "bulma": "^0.9.4",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
